# uv-datascience-project-monorepo-template

./: .coverage  404.html  Dockerfile  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  multistage.Dockerfile  objects.inv  pyproject.toml  pyrightconfig.json  pytest.ini
.devcontainer/: .env  Dockerfile.debug  README.devcontainer.md  devcontainer.json
api/: index.html
api/autoencoder/: index.html
api/fastapi_app/: index.html
api/training/: index.html
docs/: index.md
docs/api/: autoencoder.md  fastapi_app.md  index.md  training.md
docs/guides/: docker_prod.md
docs/notebooks/: app_without_fastapi.ipynb
guides/: index.html
guides/ci_github/: index.html
guides/docker_prod/: index.html
guides/docker_vscode_devcontainer/: index.html
guides/mkdocs/: index.html
guides/pre_commit/: index.html
guides/pyright/: index.html
guides/pytest/: index.html
guides/ruff/: index.html
guides/uv/: index.html
notebooks/: app_without_fastapi.ipynb  main.ipynb
notebooks/app_without_fastapi/: index.html
search/: search_index.json
src/uv_datascience_project_monorepo_template/: app_fastapi_autoencoder.py  main.py
tests/: test_app_fastapi_autoencoder.py  test_lit_auto_encoder.py  test_train_autoencoder.py
