[project]
name = "uv-datascience-project-monorepo-template"
version = "0.1.0"
description = "Tutorial Project for 1) Data Science in a Dev Container, and 2) for a Machine Learning Application in Production; using Docker, UV, and FastAPI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "David Tiefenthaler"}
]
urls = {repository = "https://github.com/tiefenthaler/uv-datascience-project-monorepo-template"}
keywords = [
    "data science project",
    "docker",
    "python",
    "template",
    "uv"
]
requires-python = ">=3.12.0, <3.13.0"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "lit-auto-encoder", # monorepo
    "pydantic>=2.10.4",
    "uvicorn>=0.34.0",
]

# DEV SETTING
[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.1",
    "pyright>=1.1.393",
    "pytest-cov>=6.0.0",
    "pytest>=8.1.1",
    "ruff>=0.9.4",
    "toml-sort>=0.24.2",
    "uv>=0.5.26",
    "pre-commit>=4.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.1.4",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.3",
    "mkdocstrings[python]>=0.15.0",
    "pymdown-extensions>=10.14.3",
]

[tool.uv.workspace]     # monorepo
members = ["packages/lit-auto-encoder"]
exclude = ["packages/mylib"]

# lit-auto-encoder = { path = "./packages/lit-auto-encoder/dist/lit_auto_encoder-0.1.0-py3-none-any.whl" }
[tool.uv.sources]       # monorepo
lit-auto-encoder = { workspace = true }

# DEV SETTING
[tool.uv]
default-groups = ["dev"]

# DEV SETTING
# ruff.toml file is used.
[tool.ruff]

# DEV SETTING
# pytest.ini file is used.
[tool.pytest]

# DEV SETTING
# .coveragerc file is used. A pytest fixture in .conftest.py is used to create coverage file/report directory.
[tool.coverage]

# DEV SETTING
# pyrightconfig.json file is used. NOTE: Ensure to set the python version correctly.
[tool.pyright]

# DEV SETTING
# NOTE: to sort, run: "uv run toml-sort pyproject.toml"
[tool.tomlsort]
in_place = true
no_sort_tables = true
sort_inline_arrays = true
spaces_before_inline_comment = 4
spaces_indent_inline_array = 4

# Defines the entry point of the packaged application
[project.scripts]
hello = "uv_datascience_project_monorepo_template:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/uv_datascience_project_monorepo_template",
    "packages/lit-auto-encoder/src/lit_auto_encoder"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
